; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-import-dump.c_log_timestamp.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-import-dump.c_log_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_generic = type { i32, i32 }

@LEV_TIMESTAMP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_timestamp(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lev_generic*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call %struct.lev_generic* @write_alloc(i32 8)
  store %struct.lev_generic* %4, %struct.lev_generic** %3, align 8
  %5 = load i32, i32* @LEV_TIMESTAMP, align 4
  %6 = load %struct.lev_generic*, %struct.lev_generic** %3, align 8
  %7 = getelementptr inbounds %struct.lev_generic, %struct.lev_generic* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* %2, align 4
  %9 = load %struct.lev_generic*, %struct.lev_generic** %3, align 8
  %10 = getelementptr inbounds %struct.lev_generic, %struct.lev_generic* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret void
}

declare dso_local %struct.lev_generic* @write_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
